deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-heart-disease-svc
spec:
  type: ClusterIP
  selector:
    app: mlops-heart-disease
  ports:
    - port: 80
      targetPort: 8000
